# Report_Generator

./: .gitignore  README.md  Test.html  Try3.html  pyproject.toml
Attempt_1/: report_generator_attempt1.py
Attempt_2/: report_generator_attempt2.py
data/: sample_transactions.json
report_generator/: __init__.py  cli.py  data_sources.py  models.py  summary.py  templates.py
tests/: test_templates.py
